# NeverMind

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
crates/harness-cli/src/: main.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: browser_moment.rs  error.rs  event.rs  learning_snapshot.rs  lib.rs  recording.rs  store.rs
docs/architecture/: backend-onboarding.md  backend-two-person-guide.md  parallel-development-plan.md
docs/architecture/contracts/: card-generation.md  library.md  review.md  settings.md
docs/product/core/: prd.md
docs/product/knowledgegraph/: 00-design.md
src/: BubbleBall.tsx  MainPanel.tsx  bubbleSkins.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_questions_and_keywords.sql  0003_screenshot_shortcut.sql
src-tauri/src/: ark.rs  lib.rs  main.rs
src-tauri/src/ai/: ark_client.rs  client.rs  config.rs  mod.rs  parser.rs  prompt.rs
src-tauri/src/commands/: generate.rs  ipc.rs  library.rs  mod.rs  review.rs  screenshot.rs  settings.rs  tray.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/dao/: card_dao.rs  mod.rs  review_dao.rs  settings_dao.rs
src-tauri/src/models/: card.rs  review.rs  settings.rs
src-tauri/src/nevermind/: mod.rs
src-tauri/src/nevermind/ai/: ark_client.rs  client.rs  config.rs  mod.rs  parser.rs  prompt.rs
src-tauri/src/nevermind/commands/: generate.rs  ipc.rs  review.rs  settings.rs
src-tauri/src/nevermind/db/: mod.rs
src-tauri/src/nevermind/db/dao/: card_dao.rs  review_dao.rs  settings_dao.rs
src-tauri/src/nevermind/models/: card.rs  mod.rs  settings.rs
src-tauri/src/nevermind/scheduler/: ebbinghaus.rs  planner.rs
src-tauri/src/nevermind/state/: mod.rs
src-tauri/src/scheduler/: ebbinghaus.rs  mod.rs  planner.rs  rules.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: error.rs
src/app/: App.tsx
src/components/: Button.tsx  Card.tsx  EmptyState.tsx  Spinner.tsx
src/features/card-generation/components/: BatchPreview.tsx  GenerateInputPanel.tsx  GeneratedCardItem.tsx
src/features/card-generation/hooks/: useCardGeneration.ts
src/features/card-generation/pages/: GeneratePage.tsx
src/features/card-generation/services/: api.ts
src/features/generation-tasks/: GenerationTasksContext.tsx
src/features/review/components/: DashboardSummary.tsx  ReviewCard.tsx
src/features/review/hooks/: useReview.ts
src/features/review/pages/: ReviewPage.tsx
src/features/review/services/: api.ts
src/features/screenshot/pages/: ScreenshotPage.tsx
src/features/settings/components/: DangerZonePanel.tsx  GeneralSettingsForm.tsx  ModelProfilesPanel.tsx
src/features/settings/hooks/: useSettings.ts
src/features/settings/pages/: SettingsPage.tsx
src/features/settings/services/: api.ts
src/layouts/: AppShell.tsx
src/lib/: format.ts  generation-from-screenshot.ts  recent-batches.ts  system-notification.ts  tauri.ts  toast.tsx  tray-generation-sync.ts
src/pages/: HomePage.tsx
src/styles/: globals.css
src/types/: card.ts  common.ts  review.ts  settings.ts
