[package]
name = "nevermind-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
image = "0.25.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "=0.7.4", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tauri = { version = "=2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "=2.0.0"
tauri-plugin-notification = "=2.0.0"
tauri-utils = { version = "=2.0.0" }
thiserror = "2"
time = "=0.3.36"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5"
uuid = { version = "1", features = ["serde", "v4"] }
xcap = "0.9.4"
