[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"
description = "Desktop harness: events, SQLite timeline, foreground collector"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# 与 nevermind-tauri 中的 sqlx 0.7 对齐 libsqlite3-sys，避免重复链接 sqlite3
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "2.0"
dirs = "6.0"
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
] }
